2016-05-02         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (success_node): Declare.
	* array.c (success_node): Define.
	* cint_array.c, int_array.c, str_array.c: Use `& success_node'
	instead of `(NODE **) ! NULL' to indicate success throughout.
	Thanks to Pat Rankin for the cleanup suggestion.

2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (set_RS): Use rs1scan if do_traditional, even if length
	of RS is > 1.  Bug reported by Glauco Ciullini
	<glauco.ciullini6245@gmail.com>.

2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.c: Replace _GL_ATTRIBUTE_PURE with
	__attribute__.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regexec.c: Stamp out last remaining use of __attribute.
	* regcomp.c: Undo change of 2016-01-24 when parsing single-byte
	ranges. Go back to treating them as bytes and not as characters.
	The change broke things on Windows in non-UTF-8 character sets.
	* mbsupport.h (mbstate_t): Define to int.
	Update copyright.

2016-04-10         John E. Malmberg      <wb8tyw@qsl.net>

	* regex_internal.c: Use _GL_ATTRIBUTE_PURE macro

2016-04-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (two_way_close_type): Move here from io.c.
	(close_rp): Add declaration.
	* builtin.c (do_printf): Call close_rp before fatal message when
	attempting to write the closed write end of a two way pipe.
	(do_print): Ditto.
	(do_print_rec): Ditto.
	* io.c (do_getline_redir): Same, for reading closed read end.
	(close_rp): Make not static.

2016-04-07  Eli Zaretskii  <eliz@gnu.org>

	* nonposix.h (WEXITSTATUS, WIFEXITED, WIFSIGNALED, WTERMSIG)
	(WIFSTOPPED, WSTOPSIG) [__MINGW32__]: New macros to replace the
	missing header sys/wait.h.
	(w32_status_to_termsig): Add prototype.

	* builtin.c (do_system) [__MINGW32__]: Compute the exit status of