@@ -1,5 +1,10 @@
 2016-05-02         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* dfa.h, dfa.c: Sync with grep.
+	* re.c (research): Adjust type of try_backref.
+
+2016-05-02         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* awk.h (success_node): Declare.
 	* array.c (success_node): Define.
 	* cint_array.c, int_array.c, str_array.c: Use `& success_node'
